# kazooRL

./: .gitignore  Dockerfile  LICENSE  README.md  README_FINAL.md  README_NEW_STRUCTURE.md  TRAINING.md  analyze_collaboration.py  analyze_irl_collaboration.py  analyze_irl_completion.py  analyze_training_results.py  developer_population_analysis.json  docker-compose.yml  evaluation_results_2022.json  evaluation_results_2023.json  execute_restructure.py  final_restructure.py  gharchive_docker_compose_events_2022.jsonl  hello.py  hybrid_50_50_results.json  hybrid_70_30_results.json  hybrid_90_10_results.json  hybrid_recommendation_results_2023.json  improved_recommendation_results_2023.json  irl_feature_integration_system.py  ppo_recommendation_results_2023.json  project_summary.py  pyproject.toml  reward_weights.npy  rl_active_recommendation_results_2023.json  run_full_training_from_scratch.py  simple_active_recommendation_results_2023.json  test_bot_excluded_evaluation.py  test_feature_dimensions.py  test_improved_system.py
analysis/: analyze_developer_population.py  debug_active_developers.py
configs/: MIGRATION_GUIDE.md  README.md  base.yaml  base_test_2023.yaml  base_training.yaml  base_training_2022.yaml  bot_excluded_production.yaml  dev_profiles.yaml  dev_profiles_test_2022.yaml  dev_profiles_test_2023.yaml  improved_ppo_training.yaml  improved_rl_training.yaml  multi_method_training.yaml  quick_test.yaml  rl_debug.yaml  rl_experiment.yaml  unified_rl.yaml
data/: backlog.json  create_expert_trajectories.py  dev_embeddings.pt  expert_events.json  generate_gragh.py  (+12 more)
(+219 files in other folders)
