[project]
name = "kazoo"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "torch>=2.3",
  "gymnasium>=0.29",
  "pettingzoo>=1.25",
  "numpy>=1.26",
  "pyyaml>=6.0.2",
  "shimmy>=2.0.0",
  "supersuit>=3.10.0",
]

[tool.uv]             
package = true         

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
