[project]
name = "kazoo"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "torch>=2.3",
  "gymnasium>=0.29",
  "pettingzoo>=1.25",
  "numpy>=1.26",
  "pyyaml>=6.0.2",
  "shimmy>=2.0.0",
  "supersuit>=3.10.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",

  "torch-geometric>=2.5.0",
  "torch-scatter>=2.1.2",
  "torch-sparse>=0.6.18",
  "torch-cluster>=1.6.1",
  "torch-spline-conv>=1.2.2"
]

[tool.uv]             
package = true         

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
